Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Some future release
-
5e0a45e932424c5ed661ae518ca21d2ab627db2d , 1eeab2d27f61485cb53364d40339a8d832a076e9
Description
Operations are sporadically timing out when they go through the SOCKS 5 proxy.
agent:2019/06/12 02:11:54 build.go:197: QWARN : tst_QFtp::rename(WithSocks5Proxy:relPath01) tst_QFtp::fileExists: Network operation timed out agent:2019/06/12 02:11:54 build.go:197: FAIL! : tst_QFtp::rename(WithSocks5Proxy:relPath01) 'fileExists( host, 21, user, password, newfile, cdDir )' returned FALSE. () agent:2019/06/12 02:11:54 build.go:197: Loc: [tst_qftp.cpp(1179)]
As a result this test has been quite flaky in the last 30 days, see the grafana dashboard. Full coin log here.
UPDATE: Thanks to ryan_chu's comment on QTQAINFRA-2275, we know that the timeouts are not related to the external qt-test-server, since the test is using docker containers.
UPDATE2: The timeout is easily reproducible on a CPU loaded VM, running the rename test with data WithSocks5Proxy, utilising two docker containers: one with danted and one with vsftpd. It is not reproducible with data WithoutProxy no matter how loaded the VM is. It is not reproducible without docker containers, no matter how loaded the server and the client machines are.
Attachments
Issue Links
- relates to
-
QTBUG-37321 Networking: 2 Socks messages in 1 TCP packet fails
- Closed
-
QTBUG-18564 Socks5 support doesn't work properly
- Closed
-
QTBUG-33975 [autotest]tst_qftp tends to fail on windows and osx
- Closed
-
QTBUG-43245 QNetworkReply with error never finishes with a SOCKS-proxy set.
- Closed
-
QTQAINFRA-2275 Migrate QFtp tests to new test server
- Closed
-
QTQAINFRA-3050 qt-test-server logfiles are overflowing
- Closed
-
QTBUG-75549 Flaky results of QFtp when testing in Coin network
- Closed
-
QTBUG-38385 QTcpSocket auto test: temporarily disable Socks5 proxy tests
- Closed